Implement domain lock for index.html
Add domain lock script to redirect unauthorized access

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
       gtag('js', new Date());
       gtag('config', 'G-L39F7GPMF4');
     </script>
+    <script>
+    // 域名锁定：如果有人复制代码并在别的网址运行，会自动跳回你的官网
+    if (window.location.hostname !== "peter-bloxd.github.io" && window.location.hostname !== "localhost") {
+        window.location.href = "https://peter-bloxd.github.io/survival/";
+    }
+</script>
 
     <meta charset="UTF-8">
     <title>生存法则官网 | 官方战术终端 V37</title>
