Update user tag condition for '932625.bloxd'

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             if (uid === "Peter_YT_Bilibili" || nick === "Peter_YT_Bilibili") return `<span class="tag tag-ffz">[副腐竹]</span>`;
             if (uid === "Peter_YYDS" || nick === "Peter") return `<span class="tag tag-mod">[Boxim 群主/管理员]</span>`;
             if (uid === "111" || nick === "焦糖猫" || nick === "CS||Steve") return `<span class="tag tag-mod">[Discord 开发/管理员]</span>`;
-            if (uid === "932625.bloxd" || nick === "932625.bloxd") return `<span class="tag tag-mod">[服务器建筑师]</span>`;
+            if (uid === "932625.bloxd" || nick === "GhastlyCyclops932625") return `<span class="tag tag-mod">[服务器建筑师]</span>`;
             return "";
         }
 
